Bug 1668942 - Fix image onload attribute r=jwatt

New wpt contains an image with an onload attribute. Image elements send a load event but that's transformed into an SVGLoad event and then we don't pick that up.
onSVGLoad and onSVGScroll are deprecated anyway. Let's just keep them for <svg> elements for now.

Differential Revision: https://phabricator.services.mozilla.com/D92581